--- a/.github/workflows/update-commits.yml
+++ b/.github/workflows/update-commits.yml
@@ -21,3 +21,5 @@ jobs:
           SHOW_LINES_OF_CODE: "True"
           SHOW_SHORT_INFO: "False"
           LOCALE: "en"
+          committer_username: herndev
+          committer_email: herndev@gmail.com
