--- a/.github/workflows/update-commits.yml
+++ b/.github/workflows/update-commits.yml
@@ -22,4 +22,4 @@ jobs:
           SHOW_SHORT_INFO: "False"
           LOCALE: "en"
           committer_username: herndev
-          committer_email: herndev@gmail.com
+          committer_email: herniejabien45@gmail.com
