--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -18,7 +18,7 @@ jobs:
           max_post_count: 3
           template: $newline - [$title]($url)
           feed_list: "https://www.techmeme.com/feed.xml?x=1,https://www.wired.com/feed/rss,http://feeds.feedburner.com/androidauthority,https://www.cnet.com/rss/news/,https://appleinsider.com/rss/news/,http://feeds.feedburner.com/Techcrunch,http://www.theverge.com/rss/full.xml"
-          committer_email: herndev@gmail.com
+          committer_email: herniejabien45@gmail.com
 
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -29,7 +29,7 @@ jobs:
           max_post_count: 3
           template: $newline - $randomEmoji(😝,👱,📀,🚖,🚅,⏩,💣,👉,6️⃣,🚯) [$title]($url)
           feed_list: "http://9gagrss.com/feed/,https://www.reddit.com/r/funny/.rss,https://www.reddit.com/r/memes/.rss"
-          committer_email: herndev@gmail.com
+          committer_email: herniejabien45@gmail.com
           
       - uses: gautamkrishnar/blog-post-workflow@master
         with:
@@ -40,4 +40,4 @@ jobs:
           max_post_count: 3
           template: $newline - [$title]($url)
           feed_list: "http://feeds.feedburner.com/PSBlog,https://news.xbox.com/en-us/feed/,http://feedproxy.google.com/GameRant,http://www.polygon.com/rss/index.xml,https://kotaku.com/rss,https://www.pcgamer.com/rss/,https://blog.playstation.com/feed/"
-          committer_email: herndev@gmail.com
+          committer_email: herniejabien45@gmail.com
