Workflow & Readme Fixes

--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -16,4 +16,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with: 
           COMMIT_MSG: "[AUTOMATED] Updated Activities from HernDev!" 
+          GH_USERNAME: "herndev"
 
