--- a/.github/workflows/github-graph.yml
+++ b/.github/workflows/github-graph.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
     # Generates the snake  
-      - uses: herndev/snk@main
+      - uses: herndev/snk@master
         id: snake-gif
         with:
           github_user_name: herndev
