--- a/.github/workflows/github-graph.yml
+++ b/.github/workflows/github-graph.yml
@@ -26,6 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
     # Generates the snake  
+    # Direct to my modified forked repo
       - uses: herndev/snk@master
         id: snake-gif
         with:
