--- a/.github/workflows/update-commits.yml
+++ b/.github/workflows/update-commits.yml
@@ -20,4 +20,5 @@ jobs:
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LINES_OF_CODE: "True"
           SHOW_SHORT_INFO: "False"
+          SHOW_CODE_TIME: "False"
           LOCALE: "en"
